fixed a lot of scrolling and spacing issues, improved responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@
 
 body {
   min-height: 100vh;
-  width: 95vw;
   margin: auto;
   background-image: url('/public/bg_pattern.webp');
   background-repeat: repeat;
